[gd_scene load_steps=4 format=3 uid="uid://c6csnw2f4dxu2"]

[ext_resource type="Script" uid="uid://iejt25evlj6n" path="res://scripts/equipment/sword.gd" id="1_0uiwq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_45n2i"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0uiwq"]

[node name="Sword" type="Node2D"]
script = ExtResource("1_0uiwq")

[node name="HitBoxTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxTrigger"]
shape = SubResource("CircleShape2D_45n2i")
debug_color = Color(0.99999994, 0.787403, 0.530571, 0.41960785)

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_0uiwq")
debug_color = Color(0.72022635, 0, 0.1634739, 0.15686275)

[connection signal="area_entered" from="HitBoxTrigger" to="." method="_on_hit_box_trigger_area_entered"]
